# stereo_depth

./: .clang-format  AppRuntime.cpp  AppRuntime.hpp  AppTopics.cpp  AppTopics.hpp  CMakeLists.txt  FoxgloveWrapper.cpp  FoxgloveWrapper.hpp  FrameInputSource.cpp  FrameInputSource.hpp  InputFrameFormat.hpp  LaserRangefinder.cpp  LaserRangefinder.hpp  Makefile  README.md  README_CN.md  StereoDepthCalibrationMesh.cpp  StereoDepthPipeline.cpp  StereoDepthPipeline.hpp  V4L2Capture.cpp  V4L2Capture.hpp  ax_stereo_depth_api.cpp  ax_stereo_depth_api.h  main.cpp  toolchain-aarch64.cmake
axera_pipeline/: AxVdecH264Decoder.cpp  AxVencH264Encoder.cpp  AxVoDisplay.cpp  sample_dsp.c  sample_engine.cpp  sample_engine.h  sample_gdc.c  sample_image.c
axera_pipeline/include/: AxVdecH264Decoder.hpp  AxVencH264Encoder.hpp  AxVoDisplay.hpp  file.hpp  io.hpp  sample_dsp.h  sample_engine.h  sample_gdc.h  sample_image.h  sample_log.h  sample_resource.h  timer.hpp
foxglove-topic-export-panel/: .gitignore  .prettierrc.yaml  CHANGELOG.md  README.md  axera.roi-z-avg-export-panel-0.3.0.foxe  eslint.config.js  package.json  tsconfig.json
foxglove-topic-export-panel/src/: TopicRangeExportPanel.tsx  index.ts
host_backend/: AxVdecH264Decoder.cpp  AxVencH264Encoder.cpp  AxclImageProc.cpp  AxclImageProc.hpp  AxclRuntime.cpp  AxclRuntime.hpp  BackendSelect.hpp  H264Codec.hpp  H264CodecHost.cpp  HostPrecheck.cpp  HostPrecheck.hpp  HostVoDisplay.cpp  ImageProcBackend.cpp  ImageProcBackend.hpp  sample_engine_axcl.cpp  sample_image_host.cpp
models/: mesh_hd_l_32x16.txt  mesh_hd_r_32x16.txt
res/: pipeline.drawio
